--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "framer-motion": "^12.23.26",
+    "lenis": "^1.3.16",
     "next": "16.0.10",
     "postcss": "^8.5.6",
     "react": "19.2.1",
